2002-05-04  Havoc Pennington  <hp@pobox.com>

	* src/frames.c (meta_frames_init): disable automatic GTK double
	buffering, since it resulted in gigantic backing pixmaps the size
	of the whole screen.
	(meta_frames_paint_to_drawable): change to take a region argument;
	punch the client area out of the expose region, then iterate over
	rectangles in the region and draw each, manually doing 
	begin_paint_rect. Results in 4 long thin backing pixmaps 
	per frame repaint, instead of one large backing pixmap. 
	Suggested by Owen.

2002-05-05  Bastien Nocera  <hadess@hadess.net>

	* src/workspace.c: (meta_workspace_get_neighbor):
	Wrap-around workspaces (ie. when on the last workspace,
	"switch_to_workspace_right" goes back to the
	first one)

2002-05-05  Anders Carlsson  <andersca@gnu.org>

	* src/metacity.schemas: Fix a spelling error and change 
	switch_to_workspace_up and switch_to_workspace_down to use
	Ctrl+Alt since Nautilus uses Alt now.

2002-05-04  Havoc Pennington  <hp@pobox.com>

	* src/window.c (update_net_wm_type): correctly print things if the
	type_atom is unset
	(meta_window_new): with workarounds disabled, always allow 
	self-placement for windows with PPosition or USPosition set.

2002-05-03  Havoc Pennington  <hp@redhat.com>

	* src/Makefile.am: fix for automake 1.5, patch from Tomasz Kloczko 

2002-05-03  Laszlo Peter  <laca@sun.com>

	* configure.in: add the X libs to METACITY_MESSAGE_LIBS and
	METACITY_WINDOW_DEMO_LIBS

2002-05-02  Havoc Pennington  <hp@redhat.com>

	* README: updates

	* configure.in: 2.3.233

2002-05-02  Bastien Nocera  <hadess@hadess.net>

	* src/metacity.schemas: change the default for switch_to_workspace_*
	to be <Control><Alt>arrow as just <Alt>arrow collides with some apps
	(especially web browsers)

2002-05-01  Havoc Pennington  <hp@redhat.com>

	* src/screen.c (meta_screen_new): Xlib doesn't like NULL for out
	arguments; fix for #80472 from lbedford

2002-04-30  Havoc Pennington  <hp@pobox.com>
